fix background jumping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ body {
   background-image: url(./assets/background.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .center {
